compiler/fabc_parser/src/ast/expr/snapshots/fabc_parser__ast__expr__literal__tests__literal_true.snap
---
source: compiler/fabc_parser/src/ast/expr/literal.rs
expression: literal
---
Boolean {
    info: NodeInfo {
        id: 0,
        span: Span {
            start: LineCol(
                1,
                1,
            ),
            end: LineCol(
                1,
                4,
            ),
        },
    },
    value: true,
}
